# R7.Emblems

./: Makefile.am  Makefile.include  R7.Emblems.sln  README.md  autogen.sh  configure.ac
R7.Emblems/: AssemblyInfo.cs  EmblemButton.cs  Gvfs.cs  Main.cs  MainWindow.cs  Makefile.am  R7.Emblems.csproj  Translation.targets  install-action-nautilus.sh  install-action-nemo.sh  install.sh  myWidget.cs  r7-emblems-action.desktop  r7-emblems.desktop  r7-emblems.nemo_action  r7-emblems.sh.in  readme.txt  uninstall.sh
R7.Emblems/gtk-gui/: R7.Emblems.MainWindow.cs  R7.Emblems.myWidget.cs  gui.stetic
Translation/: Translation.mdproj  en.po  messages.po  ru.po
po/: Translation.mdproj
